[gd_scene load_steps=3 format=3 uid="uid://damnj6214jvcd"]

[ext_resource type="Script" path="res://LoginManager.gd" id="1_eewmn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ii24"]

[node name="Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 135)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
offset_top = 279.0
offset_right = 1360.0
offset_bottom = 305.0
text = "Usuario"
horizontal_alignment = 1

[node name="UserField" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2i(200, 0)
offset_left = 580.0
offset_top = 310.0
offset_right = 780.0
offset_bottom = 341.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label2" type="Label" parent="VBoxContainer"]
offset_top = 346.0
offset_right = 1360.0
offset_bottom = 372.0
text = "Contrase√±a"
horizontal_alignment = 1

[node name="PassField" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2i(200, 0)
offset_left = 580.0
offset_top = 377.0
offset_right = 780.0
offset_bottom = 408.0
size_flags_horizontal = 4
size_flags_vertical = 4
secret = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 413.0
offset_right = 1360.0
offset_bottom = 443.0
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_6ii24")

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2i(60, 40)
offset_left = 643.0
offset_top = 448.0
offset_right = 716.0
offset_bottom = 488.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Ingresar"

[node name="LoginManager" type="Node" parent="."]
script = ExtResource("1_eewmn")

[connection signal="pressed" from="VBoxContainer/Button" to="LoginManager" method="_on_button_pressed"]
